apply plugin: 'com.android.library'
apply plugin: 'maven-publish'
apply plugin: 'signing'

Properties projectProperties = new Properties()
projectProperties.load(rootProject.file('gradle.properties').newDataInputStream())

Properties localProperties = new Properties()
File localPropertiesFile = rootProject.file('local.properties')
if (localPropertiesFile.exists()) {
    localProperties.load(localPropertiesFile.newDataInputStream())
}

android {
    compileSdk 37

    defaultConfig {
        minSdk 21
    }
    lint {
        abortOnError false
        targetSdk 37
    }
    testOptions {
        unitTests {
            includeAndroidResources = true
            all {
                // Robolectric's newest SDK sandboxes need more than the default heap and this JDK internal.
                maxHeapSize = '2g'
                jvmArgs '--add-exports=java.base/jdk.internal.access=ALL-UNNAMED'
            }
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    publishing {
        singleVariant("release") {
            withSourcesJar()
            withJavadocJar()
        }
    }
    namespace 'com.xlythe.view.graph'
}

afterEvaluate {
    publishing {
        publications {
            release(MavenPublication) {
                from components.release
                groupId = group = projectProperties.getProperty("bintray.groupId")
                artifactId = projectProperties.getProperty("bintray.artifact")
                version = projectProperties.getProperty("bintray.libraryVersion")

                pom {
                    name = projectProperties.getProperty("bintray.libraryName")
                    description = projectProperties.getProperty("bintray.libraryDescription")
                    url = projectProperties.getProperty("bintray.siteUrl")
                    licenses {
                        license {
                            name = projectProperties.getProperty("bintray.licenseName")
                            url = projectProperties.getProperty("bintray.licenseUrl")
                        }
                    }
                    developers {
                        developer {
                            id = projectProperties.getProperty("bintray.developerId")
                            name = projectProperties.getProperty("bintray.developerName")
                            email = projectProperties.getProperty("bintray.developerEmail")
                        }
                    }
                    scm {
                        connection = projectProperties.getProperty("bintray.gitUrl")
                        developerConnection = projectProperties.getProperty("bintray.gitUrl")
                        url = projectProperties.getProperty("bintray.siteUrl")
                    }
                }
            }
        }
        repositories {
            maven {
                name = "MavenCentral"
                url = "https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/"
                credentials {
                    username = localProperties.getProperty("bintray.username")
                    password = localProperties.getProperty("bintray.password")
                }
            }
        }
    }
}

signing {
    if (localProperties.getProperty("signing.key") != null) {
        useInMemoryPgpKeys(
                localProperties.getProperty("signing.keyId"),
                localProperties.getProperty("signing.key"),
                localProperties.getProperty("signing.password"),
        )
    }
    sign publishing.publications
}

// Only sign when publishing to Maven Central, so publishToMavenLocal works without signing keys.
gradle.taskGraph.whenReady { graph ->
    boolean remote = graph.hasTask("${project.path}:publish") ||
            graph.hasTask("${project.path}:publishReleasePublicationToMavenCentralRepository")
    tasks.withType(Sign).configureEach { enabled = remote }
}

dependencies {
    api fileTree(include: ['*.jar'], dir: 'libs')
    api 'androidx.legacy:legacy-support-v4:[1.0.0,)'
    api 'com.xlythe:math-library:[1.1.7,)'
    testImplementation 'org.robolectric:robolectric:4.17'
    testImplementation 'junit:junit:4.13.2'
    testImplementation 'androidx.test:core:1.7.0'
}
